# Course-Project-Intelligence

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  smoke_test.py
app/: __init__.py  config.py  main.py  schemas.py  server.py  tool_metadata.py
app/context/: __init__.py  citation_formatter.py  context_builder.py  evidence_card.py  safety_tags.py
app/core/: __init__.py  broad_school_planner.py  course_profiles.py  normalizer.py  query_analyzer.py  repo_classifier.py  retrieval_intents.py  retrieval_profiles.py  service.py  university_profiles.py  vocabulary.py
app/extractors/: __init__.py  web.py
app/providers/: __init__.py  base.py  gitee.py  github.py  registry.py  web_seed.py
app/ranking/: __init__.py  ranking_policy.py  scorer.py  types.py
app/tools/: __init__.py  course_tools.py
app/utils/: __init__.py  http.py  (+3 more)
docs/: agent-context-pack.md  agent-workflow.md  architecture.md  deployment.md  integration-claude-code.md  integration-cursor.md  integration-trae.md  provider-development.md  readme-showcase.css  readme-showcase.html  readme-showcase.zh-CN.html  release-checklist.md  release-notes-v1.0-rc1.md  routing-diagnostics.md  safety-policy.md  tool-reference.md  tool-routing-guide.md
eval/: README.md  agent_context_queries.jsonl  queries.jsonl  run_agent_context_eval.py  run_eval.py  run_workflow_eval.py  workflow_queries.jsonl
examples/: host-test-prompts.md  prompt-cookbook.md  sample-requests.json  start_mcp_stdio.bat.example
scripts/: smoke_stdio.py
tests/: test_server.py
(+12 files in other folders)
